--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.17.2",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.2"
   },
